<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <TextView
            android:id="@+id/tvBuySell"
            style="@style/order"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/buy"
            />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvBuySell"
            android:layout_alignTop="@+id/tvBuySell"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tvBuySell"
            android:layout_toRightOf="@+id/tvBuySell"
            android:ems="5"
            android:inputType="numberSigned"
            />

        <TextView
            style="@style/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvBuySell"
            android:layout_alignParentBottom="false"
            android:layout_alignTop="@+id/tvBuySell"
            android:layout_toEndOf="@+id/etQuantity"
            android:layout_toRightOf="@+id/etQuantity"
            android:text="@string/moc"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        >

        <TextView
            android:id="@+id/tvAt"
            style="@style/order"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/at"
            />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvAt"
            android:layout_alignTop="@+id/tvAt"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tvAt"
            android:layout_toRightOf="@+id/tvAt"
            android:ems="5"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/textView2"
            style="@style/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvAt"
            android:layout_alignParentBottom="false"
            android:layout_alignTop="@+id/tvAt"
            android:layout_toEndOf="@+id/etPrice"
            android:layout_toRightOf="@+id/etPrice"
            android:text="@string/cad"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>